<resources>
    <string name="app_name">TechPedia</string>

    <string name="welcome_1">Selamat Datang di TechPedia</string>
    <string name="desc_1">TechPedia merupakan platform belajar online khususnya di bidang IT untuk membantu kamu belajar agar lebih mudah dan terarah</string>

    <string name="why_tech">Mengapa Techpedia?</string>

    <string name="sub_desc2">Pembelajaran yang lengkap</string>
    <string name="desc_2">Tidak perlu khawatir , TechPedia telah menyediakan banyak modul pembelajaran yang tentunya
        lengkap
    </string>

    <string name="sub_desc3">Pembelajaran yang gratis</string>
    <string name="desc_3">Bingung gak punya biaya untuk ikut kelas online ? TechPedia telah menyediakan modul yang
        pastinya gratis
    </string>

    <string name="sub_desc4">Inovatif &amp; Up to Date"</string>
    <string name="desc_4">TechPedia menyediakan modul yang inovatif &amp; tentunya tidak akan membuat kamu bosan serta
        selalu update sehingga
    </string>

    <string name="sub_desc5">Cepat dan Tepat Waktu</string>
    <string name="desc_5">TechPedia bekerja secara cepat dan tepat untuk mengintegrasikan tanggung jawab perusahaan
        dalam bisnis inti kami
    </string>

    <string name="sub_desc6">Bekerja Secara Profesional</string>
    <string name="desc_6">TechPedia bekerja secara tim dan tentunya sangat profesional dalam hal pelayanan</string>

    <string name="icon_back">Icon Back</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="shop">Forum</string>
    <string name="user">Profile</string>

    <!-- ViewPager di fragment home -->
    <string name="welcome_slider">Welcome Slider</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Phone Number</string>
    <string name="verifyToken">Enter a Token</string>
    <string name="activeAccount">Activate</string>
    <string name="activateHeader">Activate Your Account</string>
    <string name="tambahulasan">Tambah Ulasan</string>
    <string name="ulasanhint">Ulasan</string>
</resources>
