<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="85dp"
            android:textStyle="bold"
            app:fontFamily="@font/nunito_bold"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_tech"
            android:textColor="#404ec9"
            android:textSize="25sp" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/welcome2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:src="@drawable/welcome2" />


        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome2"
            android:layout_marginTop="-170dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/sub_desc2"
            android:textColor="#404ec9"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            android:id="@+id/subdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/desc_2"
            android:textColor="#4b56d6"
            android:textSize="12sp"
            android:textStyle="italic" />





    </RelativeLayout>