<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.LoginActivity"
        android:background="@drawable/login_bk">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ImageView
                android:id="@+id/ic_backlogin"
                android:contentDescription="@string/icon_back"
                android:layout_marginTop="45dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>


    <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/loginHeader"
                android:text="@string/tambahulasan"
                android:layout_marginTop="@dimen/textloginmargin"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUlasan"
                style="@style/parent"
                android:layout_marginTop="@dimen/textloginmargin">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputulasan"
                    style="@style/modifiedEditText"
                    android:hint="@string/ulasanhint"
                    android:inputType="text"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/ulasanButton"
                style="@style/loginButton"
                android:text="@string/tambahulasan"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/textloginmargin"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>